# libduallnet

./: Cargo.toml  README.md  build.bat  build.sh  build64.bat
bindings/pascal/: .gitignore
bindings/pascal/src/: DuallNet.pas  libduallnet.pas
bindings/pascal/tests/: tests.dpr  tests.dproj  tests.lpi
src/: lib.rs  utils.rs
