[package]
name = "duallnet"
version = "1.2.1"
authors = ["silvioprog <silvioprog@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "staticlib"]

[profile.release]
lto = true

[dependencies]
libc = "0.2.66"
serde_plain = "0.3.0"
dns-lookup = "1.0.1"
mac_address = "1.0.2"
sntpc = { git = "https://github.com/silvioprog/sntpc" }