[package]
name = 'duallnet'
version = '2.0.2'
authors = ['silvioprog <silvioprog@gmail.com>']
edition = '2018'

[lib]
crate-type = [
    'cdylib',
    'staticlib',
]
[profile.release]
lto = true

[dependencies]
libc = '0.2.66'
mac_address = '1.0.2'
sntp_request = '1.1.0'
[target."cfg(windows)".dependencies.winapi]
version = '0.3'
features = ['winerror']
